--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +41,5 @@
       "last 1 safari version"
     ]
   },
-
-"proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
